Bug 558863: avoid exn throws from x in bytearray + regression tests (r=stejohns)