core/AvmCore.cpp
@@ -4893,6 +4893,7 @@ return the result of the comparison ToPrimitive(x) == y.
             bugzilla513018 = 1;     // parseFloat accepts illegal number syntax
             bugzilla524122 = 1;     // Incorrect optimization for integers in numeric sort
             bugzilla526662 = 1;     // XMLParser stops at NUL char
+            bugzilla558863 = 1;     // in operator on bytearray throws exception for non-natural number
             bugzilla585791 = 1;     // String.localeCompare with a null String object returns 0
         }
     }
